@@ -26,6 +26,21 @@ defmodule Gitlab do
     get(url)
   end
 
+  def protected_branches_access_level(level) do
+    # https://docs.gitlab.com/ee/api/protected_branches.html 참고
+    Map.get(%{"no" => 0, "developer" => 30, "maintainer" => 40, "admin" => 60}, level, nil)
+  end
+
+  def protected_branches(attrs = %{}) do
+    api_base_url = Keyword.get(Application.get_env(:slab, :gitlab), :api_base_url)
+
+    with branch_name when not is_nil(branch_name) <- Map.get(attrs, :name),
+         :ok <- delete(api_base_url <> "/protected_branches/#{branch_name}") do
+      url = api_base_url <> "/protected_branches?" <> URI.encode_query(attrs)
+      post(url)
+    end
+  end
+
   def merge_requests(commit_id) do
     api_base_url = Keyword.get(Application.get_env(:slab, :gitlab), :api_base_url)
     url = api_base_url <> "/repository/commits/#{commit_id}/merge_requests"
@@ -50,6 +65,50 @@ defmodule Gitlab do
       err ->
         Logger.info("#{inspect(err)}")
         %{headers: %{}, body: default_body}
+    end
+  end
+
+  defp post(url) do
+    timeout = Keyword.get(Application.get_env(:slab, :gitlab), :timeout_ms)
+    access_token = Keyword.get(Application.get_env(:slab, :gitlab), :private_token)
+
+    Logger.info("POST - #{url}")
+
+    with {:ok, %HTTPoison.Response{status_code: status_code, headers: headers, body: body}} <-
+           HTTPoison.post(
+             url,
+             "",
+             ["Private-Token": "#{access_token}"],
+             timeout: timeout
+           ),
+         true <- status_code >= 200,
+         {:ok, body} <- Poison.decode(body) do
+      %{headers: Map.new(headers), body: body}
+    else
+      err ->
+        Logger.info("#{inspect(err)}")
+        %{headers: %{}, body: %{}}
+    end
+  end
+
+  defp delete(url) do
+    timeout = Keyword.get(Application.get_env(:slab, :gitlab), :timeout_ms)
+    access_token = Keyword.get(Application.get_env(:slab, :gitlab), :private_token)
+
+    Logger.info("DELETE - #{url}")
+
+    with {:ok, %HTTPoison.Response{status_code: status_code}} <-
+           HTTPoison.delete(
+             url,
+             ["Private-Token": "#{access_token}"],
+             timeout: timeout
+           ),
+         true <- status_code >= 200 do
+      :ok
+    else
+      err ->
+        Logger.info("#{inspect(err)}")
+        err
     end
   end
 end
