@@ -14,3 +14,4 @@ The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]
     - commits-without-mr 커맨드로 merge request 없이 master 브랜치에 머지한 커밋을 조회할 수 있다
     - 복잡한 명령을 대체하는 alias 지원
     - help 명령어 추가
+    - branch-access 커맨드로 protected branches 접근 레벨을 변경할 수 있다
